--- a/config.toml
+++ b/config.toml
@@ -126,7 +126,7 @@ disableKinds=["404","RSS","sitemap"]
 
     # You may use markdown in summary, details and intro fields. But don't overdose, it's resume!:)
 
-    # Summary section
+    # Summary section 
     [params.summary]
         enable = true
         icon = "fa-user"
@@ -141,15 +141,23 @@ disableKinds=["404","RSS","sitemap"]
         title = "Experience"
 
         [[params.jobs.list]]
+        position = "Data Scientist"
+        dates = "April 2022 - Present"
+        company = "BI Worldwide"
+        details = """First data science function within our data group to make sense of our unstructured data along with structured data to better support client needs and tap into small, incremental improvements in performance.
+        \n * ... more to come
+        """
+
+        [[params.jobs.list]]
         position = "Data Engineer"
-        dates = "Dec 2020 - Present"
+        dates = "December 2020 - April 2022"
         company = "Charter Communications"
         details = """Our team is responsible for quantifying the user experience across our self-service product portals. `SQL` `hiveQL` `presto` `aws` `terraform` `git`
-        \n - Calculate the user experience on Charters account portals through measuring api responses, page loads, and other custom metrics (terms) depending on the feature we're measuring performance for. These terms are scaled between `0` and `1`, weight averaged & summed -- giving product developers & owners a concise, relatable number to compare relative to past performance & other features directly.
-        \n - Charter captures > 160M events per day, ~140M of them are events relevant to our pipelines, requiring forethought on appropriate index field usage and other efficinet data operations: temp-tables, CTEs, aws Athena (presto) or hive (adhoc cluster or standalone cluster).
-        \n - Maintain ETL pipelines that utilize HiveQL run on aws-emr clusters through scheduled aws-coordinators to ensure our pre-aggregations are complete before further aggregations are started.
-        \n - Pipeline aws infrastructure is defined in terraform modules allowing us to only worry about any job-specific alterations while keeping best-practices regarding tagging/permissions/fleet management etc up to date through inheritance of common modules managed by our aws platform team.
-        \n - Templated our pipelines to allow for single-day runs or back filling with addition of one additional parameter. Updates to gitlab CI/CD pipeline, shell script, and the hiveQL were required. This enhancement saves ~ 20 - 40 minutes on average every time a backfill for reprocessing is required.
+        \n * Calculate the user experience on Charters account portals through measuring api responses, page loads, and other custom metrics (terms) depending on the feature we're measuring performance for. These terms are scaled between `0` and `1`, weight averaged & summed -- giving product developers & owners a concise, relatable number to compare relative to past performance & other features directly.
+        \n * Charter captures > 160M events per day, ~140M of them are events relevant to our pipelines, requiring forethought on appropriate index field usage and other efficient data operations: temp-tables, CTEs, aws Athena (presto) or hive (adhoc cluster or standalone cluster).
+        \n * Maintain ETL pipelines that utilize HiveQL run on aws-emr clusters through scheduled aws-coordinators to ensure our pre-aggregations are complete before further aggregations are started.
+        \n * Pipeline aws infrastructure is defined in terraform modules allowing us to only worry about any job-specific alterations while keeping best-practices regarding tagging/permissions/fleet management etc up to date through inheritance of common modules managed by our aws platform team.
+        \n * Templated our pipelines to allow for single-day runs or back filling with addition of one additional parameter. Updates to gitlab CI/CD pipeline, shell script, and the hiveQL were required. This enhancement saves ~ 20 - 40 minutes on average every time a backfill for reprocessing is required.
         """
 
         [[params.jobs.list]]
@@ -159,12 +167,12 @@ disableKinds=["404","RSS","sitemap"]
 
         [[params.jobs.list]]
         position = "Decision Scientist"
-        dates = "Dec 2018 - August 2020"
+        dates = "December 2018 - August 2020"
         company = "Ibotta, Inc"
         details = """Our team was the analytical and technical support for our client success teams. Our work aims to provide automated, multifaceted campaign results via a multitude of tools include SQL, Spark, Python, and Apache Airflow. `python` `pyspark` `airflow` `presto` `git` `test/holdout audiences`
-        \n * Authored pyspark/airflow ETL pipeline to calculate program results, storing results in s3 for nightly ingestion to our snowflake datastore feeding looker dasbhoards & explores.
+        \n * Authored pyspark/airflow ETL pipeline to calculate program results, storing results in s3 for nightly ingestion to our snowflake datastore feeding looker dashboards & explores.
         \n * Technical lead on our AB testing pipeline in object-oriented pyspark and airflow to measure statistical effectiveness of Ibotta platform.
-        \n * Query optimization liason for our team, consulting with our team on efficient SQL structure and operations to help reduce run time and compute resources.
+        \n * Query optimization liaison for our team, consulting with our team on efficient SQL structure and operations to help reduce run time and compute resources.
         \n * Automated the power analysis to determine optimal control sizes along with stratifying the groups to ensure similar behavior across the treatment & control.
         \n * Ported repeated data analysis scripts into our internal python package for reproducibility and version control.
         \n * Addressed continual support requests with adding functionality to our internal python module for rest of the team to use."""
@@ -172,36 +180,46 @@ disableKinds=["404","RSS","sitemap"]
 
         [[params.jobs.list]]
         position = "Finance Data Analyst"
-        dates = "Aug 2017 - Dec 2018"
+        dates = "August 2017 - December 2018"
         company = "Johns Manville"
         details = """I worked to provide a technical background to our data projects with SQL support, advanced tableau, and python on our team within the finance department. Our team operated in close contact with the CFO to be the central analytics hub and to provide advanced data & analytics support to Johns Manville finance. `SQL` `Tableau` `python` `requirements-gathering`
-        \n* Introduced python to our team with ETL pipelines to feed our MSSQL database.
+        \n * Introduced python to our team with ETL pipelines to feed our MSSQL database.
         \n * Built a model with keras (tensorflow backend) in python to estimate tax liabilities to bring potential errors to the attention of our tax department thus reducing the possibility of incurring consultant fees.
-        \n* Managed analytics projects to completion supporting commercial sales analytics to internal tax reconciliation"""
+        \n * Managed analytics projects to completion supporting commercial sales analytics to internal tax reconciliation"""
 
         [[params.jobs.list]]
         position = "Data Analyst"
-        dates = "Mar 2015 - Aug 2017"
-        company = "BIWorldwide"
+        dates = "March 2015 - August 2017"
+        company = "BI Worldwide"
         details = """With a team that provided multifaceted analytic support for multiple channels of a large, national-telecom client. We were on top of our descriptive analytics game and worked to apply a more systematic approach to analysis to extract deeper information from our data. 
         \n `SQL` `RStats` `Tableau` `PowerPivot` `requirements-gathering` `data-communication`
-        \n * Mined our hosted blog and ran sentiment analyses with R to shed light on open-eneded participant feedback.
+        \n * Mined our hosted blog and ran sentiment analyses with R to shed light on open-ended participant feedback.
         \n * Developed a logistic regression model to determine the probability of referrals selling, and experimented with clustering on our program population to delve into promotion results and answer why some groups perform better than others.
         \n * Integrated R into some of our analyses for both internal and external stakeholder with final reporting is rendered in HTML with the knitr and flexdashboard packages allowing for great deal of interactivity between the stakeholder and the data for those without Tableau licenses."""
 
 
         [[params.jobs.list]]
         position = "Project Coordinator"
-        dates = "Sep 2014 - Mar 2015"
-        company = "BIWorldwide"
-        details = "Our team ran and operated the incentive programs for numerous automobile clients through an in-house developed web app, back-end databases and procedures, reporting, and client support.\n * Learned SQL on the job and ported all of our excel reports to SQL, saving our monday mornings.\n * Support Business Analysts with fielding of participant inquiries in a timely manner.\n * Responsible for development and execution of day-to-day sales reporting distributed to the client.\n * Complete documentation of database and Website procedures.\n "
+        dates = "September 2014 - March 2015"
+        company = "BI Worldwide"
+        details = """Our team ran and operated the incentive programs for numerous automobile clients through an in-house developed web app, back-end databases and procedures, reporting, and client support.
+        \n * Learned SQL on the job and ported all of our excel reports to SQL, saving our monday mornings.
+        \n * Support Business Analysts with fielding of participant inquiries in a timely manner.
+        \n * Responsible for development and execution of day-to-day sales reporting distributed to the client.
+        \n * Complete documentation of database and Website procedures.
+        """
 
 
         [[params.jobs.list]]
         position = "Data Analyst"
-        dates = "Jun 2013 - Sep 2014"
+        dates = "June 2013 - September 2014"
         company = "AmerisourceBergen"
-        details = "* Designed, developed, implemented, and tested new processes and dashboards that improved data analysis and tracking, reduced cost, and improved process effectiveness and accuracy.\n * Directly oversaw 10+ of these analysis processes that monitor our performance on compliance contracts valued at millions in quarterly revenue.\n * Consulted with end-users on their requirements to drive my report design, development and testing.\n * Communicated with our pharmaceutical buyers on actionable steps towards maximizing our inventory position whilst minimizing penalties associated with erratic purchasing activity.\n * Conducted mathematical analysis of inventory/service level data to ensure maximum reward payment from our contracted suppliers.\n "
+        details = """* Designed, developed, implemented, and tested new processes and dashboards that improved data analysis and tracking, reduced cost, and improved process effectiveness and accuracy.
+        \n * Directly oversaw10+ of these analysis processes that monitor our performance on compliance contracts valued at millions in quarterly revenue.
+        \n * Consulted with end-users on their requirements to drive my report design, development and testing.
+        \n * Communicated with our pharmaceutical buyers on actionable steps towards maximizing our inventory position whilst minimizing penalties associated with erratic purchasing activity.
+        \n * Conducted mathematical analysis of inventory/service level data to ensure maximum reward payment from our contracted suppliers.
+        """
 
 
 
@@ -247,7 +265,7 @@ disableKinds=["404","RSS","sitemap"]
     [params.skills]
         enable = false
         icon = "fa-rocket"
-        title = "Skills & Proficienc"
+        title = "Skills & Proficiencies"
 
         [[params.skills.list]]
         skill = "Python"
